update contact links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="company">FELIXBYTE</div>
 			</div>
 			<div>
-				<a class="contact" href="#">Contact</a>
+				<a class="contact" href="mailto:felixbyte22@gmail.com">Contact</a>
 			</div>
 		</header>
 		<main>
@@ -29,7 +29,9 @@
 						unforgettable products for brands with innovative ideas.
 					</div>
 					<div>
-						<a class="get-in-touch" href="#">Get in Touch</a>
+						<a class="get-in-touch" href="mailto:felixbyte22@gmail.com">
+							Get in Touch
+						</a>
 					</div>
 				</div>
 				<div class="section">
@@ -98,7 +100,9 @@
 			<div>
 				<div class="title spacer-md">Let's talk!</div>
 				<div>
-					<a class="get-in-touch" href="#">Get in Touch</a>
+					<a class="get-in-touch" href="mailto:felixbyte22@gmail.com">
+						Get in Touch
+					</a>
 				</div>
 			</div>
 			<div>
